examples/kubeflow-mlops/kubeflow-manifests/tests/unit-tests/awsconfigs/common/aws-alb-ingress-controller/base/test_data/expected/networking.k8s.io_v1_ingressclass_alb.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    app.kubernetes.io/name: aws-load-balancer-controller
    kustomize.component: aws-load-balancer-controller
  name: alb
  namespace: kube-system
spec:
  controller: ingress.k8s.aws/alb
  parameters:
    apiGroup: elbv2.k8s.aws
    kind: IngressClassParams
    name: alb
