examples/kubeflow-mlops/kubeflow-manifests/tests/unit-tests/awsconfigs/common/aws-alb-ingress-controller/base/test_data/expected/rbac.authorization.k8s.io_v1_clusterrolebinding_aws-load-balancer-controller-rolebinding.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  labels:
    app.kubernetes.io/name: aws-load-balancer-controller
    kustomize.component: aws-load-balancer-controller
  name: aws-load-balancer-controller-rolebinding
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: aws-load-balancer-controller-role
subjects:
- kind: ServiceAccount
  name: aws-load-balancer-controller
  namespace: kube-system
