examples/kubeflow-mlops/kubeflow-manifests/tests/unit-tests/awsconfigs/common/aws-alb-ingress-controller/base/test_data/expected/~g_v1_configmap_aws-load-balancer-controller-config.yaml
apiVersion: v1
data:
  clusterName: ""
kind: ConfigMap
metadata:
  labels:
    kustomize.component: aws-load-balancer-controller
  name: aws-load-balancer-controller-config
  namespace: kube-system
