examples/kubeflow-mlops/kubeflow-manifests/tests/unit-tests/awsconfigs/common/aws-alb-ingress-controller/base/test_data/expected/~g_v1_service_aws-load-balancer-webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: aws-load-balancer-controller
    kustomize.component: aws-load-balancer-controller
  name: aws-load-balancer-webhook-service
  namespace: kube-system
spec:
  ports:
  - port: 443
    targetPort: 9443
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/name: aws-load-balancer-controller
    kustomize.component: aws-load-balancer-controller
